Fix moon mobile

--- a/src/components/sections/forest/forestSection.scss
+++ b/src/components/sections/forest/forestSection.scss
@@ -65,7 +65,7 @@
   &__moon {
     z-index: 1;
     position: absolute;
-    top: -4%;
+    top: -2%;
     left: 6%;
     width: 20%;
   }
@@ -127,6 +127,10 @@
         opacity: 0;
         transition: opacity linear 500ms;
       }
+    }
+
+    &__moon {
+      top: -4%;
     }
 
     &__moon_back {
